fix for mobile bounce whitespace

--- a/src/styles.css
+++ b/src/styles.css
@@ -14,13 +14,13 @@ html {
     width: 100vw;
     font-size: 100%;
     overflow-x: hidden;
-    background: green;
+    background-image: url(./assets/images/wood.jpg);
+    background-attachment: fixed;
 }
 
 body {
     width: 100%;
     height: 100%;
-    background: url(./assets/images/wood.jpg);
 }
 
 a {
